2006-12-11  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Added support for turning translucency on/off for paperdolls. New data for
	  BG and SI paperdolls has been added.
	* Fixed a couple goofs with new paperdoll art, and added some more art by
	  Crysta the Elf.
	* Loading a mod directly from the command line will no longer default to
	  the original game if the specified mod is not found or is not compatible
	  with the present Exult version.
	* Gave a much-needed version increase to Exult, particularly since the
	  paperdoll data it now expects is not backwards-compatible.

2006-12-11  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Added support for static usecode classes;
	* Compatibility update for Keyring mod with new BG paperdoll data.

2006-12-10  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Scripted steps now force the step to take place regardless of obstacles or
	  terrain (FoV & SS verified);
	* Changed handling of barges to allow movement type of barges above ground
	  level to 'MOVE_LEVITATE' (FoV & SS verified).
	* Adding more BG paperdoll art by Crysta the Elf.

2006-12-09  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Adding tons of new paperdoll graphics for BG by Crysta. Also removed
	  unneeded file.
	* Improved UCXT data files and intrinsic table.
	* Improved WUD/WUC opcode table and fixed a few errors.

2006-12-08  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixing a few stack corruption bugs in UCC.
	* Changing wud/wuc name of opcode 0x5C.

2006-12-07  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Changing the way Exult handles the game clock. Now, the game clock 'ticks'
	  25 times per game minute, regardless of FPS, which seems to be the way it
	  worked in the original.
	* Sime improvements to the 'pace' schedule.
	* NPC schedules now update every hour, and look back until it finds a
	  schedule for the NPC.
	* Added a 'continue' statement in UCC for 'while' and 'for' statements.